# AppleMath

./: .gitignore  CMakeLists.txt  README.md
doc/: config  remakeDoc.sh
include/AppleMath/: AppleMath.hpp  Matrix.hpp  Vector.hpp  configuration.hpp
include/Math/: Matrix.hpp  Vector.h  Vector.hpp  configuration.hpp
src/: Vector.cpp
test/: MatrixTest.cpp  VectorTest.cpp
